# ftw-prue

./: .gitignore  .gitmodules  BAKEOFF-EXPRS.md  CHANGELOG.md  LICENSE  README.md  aggregate.py  clay_finetuned_results.txt  create_env.sh  env.yaml  env.yml  eval_clay.sh  eval_gfm.sh  pyproject.toml  requirements.txt  run_full_eval.sh  test_ftw_sam.sh  train_clay.sh  train_ftw_sam.sh  train_gfm.sh  train_sam.sh  visualize.py  viz_sam2_ftw.py
GFMs/: README.md  extract_ftw_croma_emb.py  extract_ftw_decur_emb.py  extract_ftw_dofa_emb.py  extract_ftw_galileo_emb.py  extract_ftw_prithvi_emb.py  extract_ftw_satlas_emb.py  extract_ftw_softcon_emb.py
configs/: metadata.yaml
configs/d2/: maskformer2_swin_small_default.yaml
configs/decode/: decode_config.yaml
configs/delineate_anything/: default.yaml
configs/ftw/panoptic-segmentation/: base_ftw_panoptic.yaml  maskformer2_R50_ftw_panoptic.yaml
configs/release/2_class/: cc-by-ftw.yaml  full-ftw.yaml
configs/release/3_class/: cc-by-ftw.yaml  full-ftw.yaml  vit.yaml
configs/sam/: base_config.yaml  e2e_config.yaml
decode/: README.md  base_config.yaml  config_example.yaml  data_module.py  eval.py  train_test.py
decode/fractal_resunet/: __init__.py
decode/fractal_resunet/models/: __init__.py
detectron2/checkpoint/: detection_checkpoint.py
detectron2/model_zoo/: configs
ftw_tools/: cli.py  settings.py  utils.py
ftw_tools/download/: download_ftw.py  download_img.py  unpack.py
ftw_tools/models/: baseline_eval.py  baseline_inference.py  segmentor.py
ftw_tools/postprocess/: detections.py  evaluator.py  intermediate_formats.py  lulc_filtering.py  metrics.py  polygonize.py
ftw_tools/torchgeo/: datamodules.py  datasets.py  losses.py  preprocess.py  trainers.py
mask2former/: __init__.py
mask2former/data/: __init__.py
mask2former/modeling/: __init__.py  matcher.py
panopticapi/panopticapi/: evaluation.py
pretrained/: README.md  path_config.py  pretrained_factory.py
pretrained/models/: compute_feats.py  model_utils.py  visualize_feats.py  visualize_feats_w_anyup.py  visualize_precomputed_feats.py
pretrained/models/TerraFM/: terrafm.py  (+1 more)
prue_eval/: README.md  __init__.py  converters.py  detections.py  eval_gfms.py  evaluator.py  intermediate_formats.py
prue_eval/models/: __init__.py  registry.py
sam2_ftw/: README.md  build_sam_v2.py  config_example.yaml  config_example_3class.yaml  config_sam_rebuttal.yaml  datamodules_v2.py  dataset_v2.py  example_eval_workflow.py  metrics_v2.py  sam2_all_countries_average.csv  sam2_all_countries_summary.csv  sam2_ftw_eval.py  sam2_ftw_test.py  sam2_ftw_train.py  sam2_ftw_train_v2.py  test_model.sh  utils.py
scripts/: README.md  eval_clay.sh  eval_gfm.sh  evaluate.py  evaluate_by_country.py  find_ablation_configs.py  predict_and_visualize.py  predict_geotiff_to_geojson.py  run_model_inference.py  setup.py  train_clay.sh  train_gfm.sh  train_panoptic.py
scripts/embeddings/: extract_ftw_decur_emb.py  extract_ftw_dofa_emb.py  extract_ftw_prithvi_emb.py
src/: converters.py  detections.py  evaluation_raw_mask.py  evaluator.py  intermediate_formats.py
src/models/: __init__.py  registry.py
src/pretrained/: README.md
tests/: conftest.py  test_decode.py  test_imports.py  test_losses.py  test_segmentor.py  test_settings.py  test_utils.py
tools/: benchmark_throughput.py  ftw_to_coco.py  search_ftw_image_splits.py
trainer/: __init__.py  custom_hooks.py  custom_trainer.py  evaluation.py  io_utils.py  log_system.py  lr_schedulers.py  metadata.py  postprocessing.py  postprocessing_geo.py  postprocessing_pixel.py  pred_visualization.py  prediction.py  token_visualization.py
(+153 files in other folders)
