[project]
name = "ftw-prue"
version = "0.1.0"
description = "PRUE: A Practical Recipe for Uncovering the Predicting Power of Foundation Models in Remote Sensing - Field Boundary Segmentation Benchmark on FTW"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "torchgeo>=0.6",
    "lightning>=2.1",
    "segmentation-models-pytorch>=0.4",
    "torchmetrics>=1.0",
    "timm>=0.9",
    "einops>=0.7",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "click>=8.0",
    "pyyaml>=6.0",
    "jsonargparse[signatures]>=4.27",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "tqdm>=4.65",
    "wandb>=0.15",
    "opencv-python>=4.8",
    "kornia>=0.7",
]

[project.optional-dependencies]
gfm = [
    "terratorch>=1.0",
    "transformers>=4.30",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
]
sam2 = [
    # SAM2 must be installed separately from https://github.com/facebookresearch/sam2
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = ["ftw-prue[gfm,dev]"]

[project.scripts]
ftw = "ftw_tools.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["ftw_tools*", "pretrained*", "decode*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
