[project]
name = "ftw-prue"
version = "0.1.0"
description = "PRUE: A Practical Recipe for Field Boundary Segmentation at Scale (CVPR 2025)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "torchgeo>=0.6",
    "lightning>=2.1",
    "segmentation-models-pytorch>=0.4",
    "torchmetrics>=1.0",
    "timm>=0.9",
    "einops>=0.7",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "click>=8.0",
    "pyyaml>=6.0",
    "jsonargparse[signatures]>=4.27",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "tqdm>=4.65",
    "wandb>=0.15",
    "opencv-python>=4.8",
    "kornia>=0.7",
    "python-box>=7.0",
]

[project.optional-dependencies]
gfm = [
    "terratorch>=1.0",
    "transformers>=4.30",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
]
sam2 = [
    "sam2>=1.0",
    "hydra-core>=1.3",
]
decode = [
    # DECODE (FracTAL ResUNet) has no extra deps beyond core
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]
all = ["ftw-prue[gfm,sam2,dev]"]

[project.scripts]
ftw = "ftw_tools.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["ftw_tools*", "pretrained*", "decode*"]

# --- Ruff: formatting only, no linting ---
[tool.ruff]
line-length = 120
target-version = "py310"
# Only format 1st-party code; exclude submodules and vendored code
extend-exclude = [
    "pretrained/models/galileo_benchmark/galileo",
    "pretrained/models/clay/src",
    "pretrained/models/clay/configs",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
# Disable all lint rules — ruff is used for formatting only
select = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
